add new tricks for Mac OS X