@@ -3,8 +3,27 @@ layout: post
 title: Tricks for using Mac OS X
 ---
 
+## System wide variables setting (including GUI application)
+`/etc/launchd.conf` is the configuration file for setting system wide variables. Following is an example.
+
+~~~bash
+setenv JAVA_VERSION 1.6
+setenv JAVA_HOME /System/Library/Frameworks/JavaVM.framework/Versions/1.6/Home
+setenv GROOVY_HOME /Applications/Dev/groovy
+setenv GRAILS_HOME /Applications/Dev/grails
+setenv NEXUS_HOME /Applications/Dev/nexus/nexus-webapp
+setenv JRUBY_HOME /Applications/Dev/jruby
+
+setenv ANT_HOME /Applications/Dev/apache-ant
+setenv ANT_OPTS -Xmx512M
+
+setenv MAVEN_OPTS "-Xmx1024M -XX:MaxPermSize=512m"
+setenv M2_HOME /Applications/Dev/apache-maven
+~~~
+
+
 ## Bash setting
-`~/.bash_profile` Will be executed for every time an Terminal get started for the specific user.  
+`~/.bash_profile` will be executed for every time an Terminal get started for the specific user.  
 `/etc/profile` for all users.
 
 ~~~bash
@@ -25,7 +44,7 @@ sudo apachectl -k start|stop|restart
 ~~~
 
 ### Mysql
-Mysql will be installed at `/usr/local/mysql` through `.DMG` file.
+Mysql will be installed at `/usr/local/mysql` through `.DMG` file. Find Mysql control panel in "System Preferences"
 
 ~~~bash
 sudo /usr/local/mysql/bin/mysqld_safe
